Fix headertextsize on mobile

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -14,6 +14,7 @@ header {
 	    text-align: center;
 	    position: absolute;
 	    height: 80px;
+	    width: 80vw;
 	    filter: drop-shadow(4px 4px 1px $igem-dark);
 	}
 	.header-image {
